# agentic-patterns

./: README.md  pyproject.toml
patterns/01_reflection/: example.py
patterns/02_tool_use/: example.py
patterns/03_planning/: example.py
patterns/04_multi_agent/: example.py
patterns/05_dynamic_routing/: example.py
